--- a/src/app.postcss
+++ b/src/app.postcss
@@ -3,13 +3,13 @@
 @tailwind utilities;
 
 @layer base {
-	body {
-		@apply antialiased font-mono bg-dark text-light;
-	}
-	button {
-		/* focus */
-		@apply focus:outline-none focus:text-light-dark;
-		/* hover */
-		@apply hover:text-light-dark;
-	}
+  body {
+    @apply bg-dark font-mono text-light antialiased;
+  }
+  button {
+    /* focus */
+    @apply focus:text-light-dark focus:outline-none;
+    /* hover */
+    @apply hover:text-light-dark;
+  }
 }
